--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "main": "case-camel.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "keywords": [
     "case",
@@ -19,5 +19,15 @@
   "bugs": {
     "url": "https://github.com/ileri/case-camel/issues"
   },
-  "homepage": "https://github.com/ileri/case-camel"
+  "homepage": "https://github.com/ileri/case-camel",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha-test": "^0.12.7",
+    "jshint-stylish": "^1.0.0",
+    "load-grunt-tasks": "^3.0.0",
+    "mocha": "^2.1.0",
+    "time-grunt": "^1.0.0"
+  }
 }
