--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "case-camel",
+  "description": "Parse and stringify CamelCase strings",
   "version": "0.3.1",
   "author": "Malte-Maurice Dreyer <dreyer.maltem@gmail.com>",
   "bugs": {
