--- a/package.json
+++ b/package.json
@@ -7,15 +7,11 @@
     "url": "https://github.com/ileri/case-camel/issues"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-bump": "^0.1.0",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-test": "^0.12.7",
-    "jshint-stylish": "^1.0.0",
-    "load-grunt-tasks": "^3.0.0",
-    "mocha": "^2.1.0",
-    "time-grunt": "^1.0.0"
+    "babel": "^4.4.6",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^4.0.0",
+    "gulp-mocha": "^2.0.1",
+    "gulp-sourcemaps": "^1.5.1"
   },
   "homepage": "https://github.com/ileri/case-camel",
   "keywords": [
